<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/nav_category_group_one"
        android:title="@string/nav_category_one">
        <menu>
            <item
                android:id="@+id/packages_item"
                android:checkable="true"
                android:icon="@drawable/ic_package"
                android:title="@string/packages_title"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/buy_item"
                android:checkable="true"
                android:icon="@drawable/ic_buy"
                android:title="@string/buy_title"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/leaderboard_item"
                android:checkable="true"
                android:icon="@drawable/ic_leaderboard"
                android:title="@string/leaderborad_title"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/awards_item"
                android:checkable="true"
                android:icon="@drawable/ic_award"
                android:title="@string/awards_title"
                app:showAsAction="ifRoom" />

        </menu>
    </item>

</menu>