<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.ChooseGameActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/choose_game_toolbar"
        layout="@layout/choose_game_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:layout_gravity="center"
        android:text="@string/choose_game"/>

    <RadioGroup
        android:id="@+id/game_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/word_translations"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translation_opt" />

        <RadioButton
            android:id="@+id/word_explanations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explanation_opt" />

        <RadioButton
            android:id="@+id/word_phrases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phrase_opt" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/explore_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/explore_cards"
        android:elevation="12dp"
        style="@style/smallComponentsStyle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/learn_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/learn_cards"
        android:elevation="12dp"
        style="@style/smallComponentsStyle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start_quiz"
        android:elevation="12dp"
        style="@style/smallComponentsStyle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start_memory"
        android:elevation="12dp"
        style="@style/smallComponentsStyle"
        />

</LinearLayout>