<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetPackageActivity">

    <include
        android:id="@+id/set_package_toolbar"
        layout="@layout/set_package_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/package_name_field_hint"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/expandedInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/native_language_field_hint"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/native_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/expandedInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/foreign_language_field_hint"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/foreign_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/artwork"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:srcCompat="@drawable/ic_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_image"
        android:elevation="12dp"
        style="@style/smallComponentsStyle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_package"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/apply"
            android:elevation="12dp"
            style="@style/smallComponentsStyle"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismiss_package"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/dismiss"
            android:elevation="12dp"
            style="@style/smallComponentsStyle"
            />
    </LinearLayout>


</LinearLayout>