<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".SetFlashCardActivity"
                android:orientation="vertical">

                <include
                    android:id="@+id/set_flash_card_toolbar"
                    layout="@layout/set_flash_card_toolbar"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="4dp"
                    android:layout_gravity="center"
                    android:text="@string/word_field_hint"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/word_input"
                    style="@style/inputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_field_hint"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_edit">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="4dp"
                    android:layout_gravity="center"
                    android:text="@string/translation_label"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/translations_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:itemCount="5"
                    tools:listitem="@layout/recycle_list_translation_item" />

                <ImageButton
                    android:id="@+id/add_translation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_add"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="4dp"
                    android:layout_gravity="center"
                    android:text="@string/explanation_label"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/explanations_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:itemCount="5"
                    tools:listitem="@layout/recycle_list_explanation_item" />

                <ImageButton
                    android:id="@+id/add_explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_add"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="4dp"
                    android:layout_gravity="center"
                    android:text="@string/phrase_label"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/phrases_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:itemCount="5"
                    tools:listitem="@layout/recycle_list_phrase_item" />

                <ImageButton
                    android:id="@+id/add_phrase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_add"
                    tools:ignore="SpeakableTextPresentCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="32dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/apply_flash_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/apply"
                        android:elevation="12dp"
                        style="@style/smallComponentsStyle"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/dismiss_flash_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/dismiss"
                        android:elevation="12dp"
                        style="@style/smallComponentsStyle"
                        />
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>